[gd_scene load_steps=14 format=3 uid="uid://bl7ocof378s7i"]

[ext_resource type="Script" path="res://scenes/zombies/shooter_enemy.gd" id="1_aqm86"]
[ext_resource type="Texture2D" uid="uid://bpufkobbgchrh" path="res://assets/textures/player.png" id="2_gb1au"]
[ext_resource type="PackedScene" uid="uid://7x5qraw2g1u7" path="res://scenes/player/gun.tscn" id="3_8avqw"]
[ext_resource type="Texture2D" uid="uid://biiisgie370er" path="res://assets/textures/Bat.png" id="4_mnxim"]
[ext_resource type="Texture2D" uid="uid://cicbx8x16kwsi" path="res://assets/textures/Shadow.png" id="5_n0unc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c0kwr"]
size = Vector2(32, 93)

[sub_resource type="CircleShape2D" id="CircleShape2D_aj1xo"]
radius = 328.39

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ym3n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f1ied"]
bg_color = Color(0.6, 0, 0, 1)

[sub_resource type="Animation" id="Animation_ph0it"]
resource_name = "idle"
length = 0.45
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bat:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_ksmgq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bat:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_khing"]
resource_name = "attack"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shadow:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bat:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_slsqs"]
_data = {
"RESET": SubResource("Animation_ksmgq"),
"attack": SubResource("Animation_khing"),
"idle": SubResource("Animation_ph0it")
}

[node name="shooter_Enemy" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_aqm86")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 5.5)
shape = SubResource("RectangleShape2D_c0kwr")

[node name="Icon" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 0, 0, 1)
scale = Vector2(4, 4)
texture = ExtResource("2_gb1au")
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[node name="View" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="View"]
shape = SubResource("CircleShape2D_aj1xo")

[node name="Gun" parent="." instance=ExtResource("3_8avqw")]
visible = false
position = Vector2(5, 15)

[node name="health" type="ProgressBar" parent="."]
offset_left = -48.0
offset_top = -72.0
offset_right = 48.0
offset_bottom = -56.0
theme_override_styles/background = SubResource("StyleBoxFlat_8ym3n")
theme_override_styles/fill = SubResource("StyleBoxFlat_f1ied")
max_value = 40.0
value = 40.0
show_percentage = false

[node name="Bat" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("4_mnxim")
hframes = 5

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(0, 16)
scale = Vector2(4, 4)
texture = ExtResource("5_n0unc")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_slsqs")
}

[connection signal="body_entered" from="View" to="." method="_on_view_body_entered"]
[connection signal="body_exited" from="View" to="." method="_on_view_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
